Java10 readiness